--- a/src/css/common.css
+++ b/src/css/common.css
@@ -18,6 +18,15 @@ img {
 }
 
 /*  */
+/* body {
+  display: block;
+  align-content: center;
+} */
+
+input {
+  font-size: 18px;
+}
+
 button {
   appearance: none;
   border: 0;
@@ -43,3 +52,22 @@ button[disabled] {
   background: #6c7589;
   cursor: not-allowed;
 }
+
+.timer {
+  font-family: sans-serif;
+  font-size: 42px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+}
+
+.label {
+  font-size: 16px;
+}
+/* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+   "Helvetica Neue", sans-serif; */
