--- a/src/css/common.css
+++ b/src/css/common.css
@@ -55,7 +55,7 @@ button[disabled] {
 
 .timer {
   font-family: sans-serif;
-  font-size: 48px;
+  font-size: 42px;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -64,10 +64,12 @@ button[disabled] {
 .field {
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 .label {
   font-size: 16px;
+  text-transform: uppercase;
 }
 /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
    "Helvetica Neue", sans-serif; */
