--- a/src/css/common.css
+++ b/src/css/common.css
@@ -73,3 +73,13 @@ button[disabled] {
 }
 /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
    "Helvetica Neue", sans-serif; */
+
+.text-input {
+  position: absolute;
+  top: -25px;
+  left: 0px;
+}
+
+.label-input {
+  position: relative;
+}
