--- a/src/css/common.css
+++ b/src/css/common.css
@@ -74,6 +74,7 @@ button[disabled] {
 /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
    "Helvetica Neue", sans-serif; */
 
+/* Label over input */
 .text-input {
   position: absolute;
   top: -25px;
